update git and add mac fans control

--- a/hiera/users/salimane.yaml
+++ b/hiera/users/salimane.yaml
@@ -67,6 +67,7 @@ boxen::personal::osx_apps:
   - lastpass # https://lastpass.com/
   - libreoffice # http://www.libreoffice.org/
   - licecap # http://www.cockos.com/licecap/
+  - macs-fan-control
   # - magican # http://www.magicansoft.com/ error
   # - nmap error
   - onyx # http://www.titanium.free.fr/downloadonyx.php
