--- a/hiera/users/username.yaml.example
+++ b/hiera/users/username.yaml.example
@@ -129,6 +129,7 @@
 #   - flux # http://justgetflux.com/
 #   - gimp # http://www.gimp.org/
 #   - github # mac.github.com
+#   - gfxcardstatus
 #   - google-drive
 #   - google-hangouts
 #   - google-notifier # http://toolbar.google.com/gmail-helper/notifier_mac.html
@@ -149,6 +150,7 @@
 #   - lastpass # https://lastpass.com/
 #   - libreoffice # http://www.libreoffice.org/
 #   - licecap # http://www.cockos.com/licecap/
+#   - macs-fan-control
 #   - limechat # http://limechat.net/mac/
 #   - macvim # http://code.google.com/p/macvim/
 #   - magican # http://www.magicansoft.com/
@@ -182,6 +184,7 @@
 #   - skype
 #   - slate
 #   - smartgit
+#   - smcfancontrol
 #   - sourcetree # http://www.sourcetreeapp.com/
 #   - spectacle # http://spectacleapp.com/
 #   - spotify # https://www.spotify.com/
