--- a/facts.d/common.yaml
+++ b/facts.d/common.yaml
@@ -5,4 +5,4 @@
 # of how Puppet's custom resource providers work.
 
 homebrew_root: /usr/local
-# brewcask_root: /opt/homebrew-cask
+brewcask_root: /opt/homebrew-cask
