add pv to packages

--- a/hiera/common.yaml.example
+++ b/hiera/common.yaml.example
@@ -46,4 +46,4 @@ ruby::version::alias:
   2.0.0: 2.0.0-p598
 
 # See https://github.com/boxen/puppet-java for docs
-java::update_version: 71
+# java::update_version: 80
