--- a/facts.d/common.yaml
+++ b/facts.d/common.yaml
@@ -6,3 +6,6 @@
 
 homebrew_root: /usr/local
 brewcask_root: /opt/homebrew-cask
+default_ruby_version: '2.2.1'
+default_bundler_version: '1.8.4'
+default_node_version: 'v0.10'
