update vagrant and virtualbox version

--- a/hiera/users/salimane.yaml
+++ b/hiera/users/salimane.yaml
@@ -83,6 +83,7 @@ boxen::personal::osx_apps:
   - skype
   - slack
   - smartgit
+  - sourcetree
   - spectacle # http://spectacleapp.com/
   - spotify # https://www.spotify.com/
   - torbrowser
