update nodejs module

--- a/facts.d/common.yaml
+++ b/facts.d/common.yaml
@@ -8,4 +8,4 @@ homebrew_root: /usr/local
 brewcask_root: /opt/homebrew-cask
 default_ruby_version: '2.2.2'
 default_bundler_version: '1.10.5'
-default_node_version: 'v0.12'
+default_node_version: '0.12.7'
