update nodejs and virtualbox

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -74,7 +74,7 @@ boxen::personal::homebrew_packages:
   - awscli
   - ctags
   - gist
-  - the_silver_searcher
+  - the_silver_searcher # https://github.com/ggreer/the_silver_searcher
   - jq
   - keybase
 
@@ -89,6 +89,7 @@ boxen::personal::homebrew_packages:
   - ack
   - findutils
   - gnu-tar
+  - watch
 
 # See https://github.com/boxen/puppet-ruby for docs
 ruby::rbenv::plugins:
@@ -116,24 +117,24 @@ ruby::rbenv::plugins:
 ruby::version::alias:
   2.0.0: 2.0.0-p645
 ruby::global::version: "2.2.3"
-ruby::build::ensure: "01abf988f4e56b626b20f31bcb9f7769a5758b42"
-ruby::rbenv::ensure: "c18a3f9042af7cae59780dda066ef0d1b9447278"
+ruby::build::ensure: bd222051df1240f77f4b0f24bd809812b9357867
+ruby::rbenv::ensure: 5fb9c84e14c8123b2591d22e248f045c7f8d8a2c
 # Use default ports for databases
 # mysql::config::port: 3306
 # postgresql::port: 5432
 
 appcode2::version: '3.0.6'
 charles::version: 3.9.3
-homebrew::min_revision: fda36921cb2d2d7875a8c2e0bc44715477ecf5e0
+homebrew::min_revision: 2e74d305708c19898a804669b4161bcad3088609
 homebrew::repo: 'homebrew/homebrew'
 osxfuse::version: 2.7.3
 pycharm::version: 4.0.1
 sourcetree::version: 2.0.5
 thunderbird::version: 32.2.0
 vagrant::version: 1.7.4
-virtualbox::patch_level: 103449
-virtualbox::version: 5.0.8
+virtualbox::patch_level: 104061
+virtualbox::version: 5.0.10
 git::package: 'git'
 git::version: '2.6.3'
-nodejs::build::ensure: '8cbf7421f00cb4a189cf6e84fdfebaa4ebea3c27'
-nodejs::nodenv::ensure: v0.4.0
+nodejs::build::ensure: c5fac71ef20a85841c7fd76f751ed11e2f8625ec
+nodejs::nodenv::ensure: 315c6a13ec88372ab04366d58e9cbde2acfb31cb
