update nginx module and homebrew
Signed-off-by: Salimane Adjao Moustapha <me@salimane.com>

--- a/hiera/users/salimane.yaml
+++ b/hiera/users/salimane.yaml
@@ -90,7 +90,7 @@ boxen::personal::homebrew_packages:
   - gpg
   - gpg-agent
   - gprof2dot
-  - heroku-toolbelt
+  - heroku
   - htop-osx
   - jq
   - libevent
