--- a/hiera/users/username.yaml.example
+++ b/hiera/users/username.yaml.example
@@ -193,7 +193,7 @@
 #   - gist
 #   - go
 #   - gprof2dot
-#   - heroku-toolbelt
+#   - heroku
 #   - homebrew/fuse/ntfs-3g
 #   - htop-osx
 #   - httpry
