Update virtualbox version
Signed-off-by: Salimane Adjao Moustapha <me@salimane.com>

--- a/hiera/users/salimane.yaml
+++ b/hiera/users/salimane.yaml
@@ -96,6 +96,7 @@ boxen::personal::homebrew_packages:
   - heroku
   - htop-osx
   - jq
+  - keybase
   - libevent
   - libpng
   - moreutils # http://joeyh.name/code/moreutils/
